Added test case for addition of orders in the localOrderBook